--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -26,11 +26,11 @@
     <link href="@ViewService.ThemeUrl("/static/css/style.min.css")" rel="stylesheet">
     @if (ViewService.AllowCloudCdn() == "true")
     {
-        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     }
     else
     {
-        <script src="/static/admin/plugins/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/admin/plugins/jquery/3.2.1/jquery.min.js"></script>
     }
 
     <script src="@ViewService.ThemeUrl("/static/js/highlight.min.js")"></script>
@@ -75,25 +75,25 @@
                 <div class="social-list">
                     @if (!ViewService.SiteOption("social_weibo").IsNullOrWhiteSpace())
                     {
-                        <a class="social weibo" target="blank" href="http://weibo.com/@ViewService.SiteOption("social_weibo")">微博</a>
+                    <a class="social weibo" target="blank" href="http://weibo.com/@ViewService.SiteOption(" social_weibo")">微博</a>
                     }
 
                     @if (!ViewService.SiteOption("social_zhihu").IsNullOrWhiteSpace())
                     {
-                        <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/@ViewService.SiteOption("social_zhihu")">知乎</a>
+                    <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/@ViewService.SiteOption(" social_zhihu")">知乎</a>
                     }
 
                     <a class="social rss" target="blank" href="/feed">RSS</a>
 
                     @if (!ViewService.SiteOption("social_github").IsNullOrWhiteSpace())
                     {
-                        <a class="social github" target="blank"
-                           href="https://github.com/@ViewService.SiteOption("social_github")">Github</a>
+                    <a class="social github" target="blank"
+                       href="https://github.com/@ViewService.SiteOption(" social_github")">Github</a>
                     }
 
                     @if (!ViewService.SiteOption("social_twitter").IsNullOrWhiteSpace())
                     {
-                        <a class="social twitter" target="blank" href="https://twitter.com/@ViewService.SiteOption("social_twitter")">Twitter</a>
+                    <a class="social twitter" target="blank" href="https://twitter.com/@ViewService.SiteOption(" social_twitter")">Twitter</a>
                     }
                 </div>
             </div>
@@ -116,13 +116,54 @@
                 </div>
 
                 <div class="meta-item meta-posts">
-                    <h3 class="meta-title">友链</h3>
-                    TODO
+                    <h3 class="meta-title">
+                        <svg viewBox="0 0 54.971 54.971" width="10" height="10">
+                            <g><path d="M51.173,3.801c-5.068-5.068-13.315-5.066-18.384,0l-9.192,9.192c-0.781,0.781-0.781,2.047,0,2.828c0.781,0.781,2.047,0.781,2.828,0l9.192-9.192c1.691-1.69,3.951-2.622,6.363-2.622c2.413,0,4.673,0.932,6.364,2.623s2.623,3.951,2.623,6.364c0,2.412-0.932,4.672-2.623,6.363L36.325,31.379c-3.51,3.508-9.219,3.508-12.729,0c-0.781-0.781-2.047-0.781-2.828,0s-0.781,2.048,0,2.828c2.534,2.534,5.863,3.801,9.192,3.801s6.658-1.267,9.192-3.801l12.021-12.021c2.447-2.446,3.795-5.711,3.795-9.192C54.968,9.512,53.62,6.248,51.173,3.801z" /><path d="M27.132,40.57l-7.778,7.778c-1.691,1.691-3.951,2.623-6.364,2.623c-2.412,0-4.673-0.932-6.364-2.623c-3.509-3.509-3.509-9.219,0-12.728L17.94,24.306c1.691-1.69,3.951-2.622,6.364-2.622c2.412,0,4.672,0.932,6.363,2.622c0.781,0.781,2.047,0.781,2.828,0s0.781-2.047,0-2.828c-5.067-5.067-13.314-5.068-18.384,0L3.797,32.793c-2.446,2.446-3.794,5.711-3.794,9.192c0,3.48,1.348,6.745,3.795,9.191c2.446,2.447,5.711,3.795,9.191,3.795c3.481,0,6.746-1.348,9.192-3.795l7.778-7.778c0.781-0.781,0.781-2.047,0-2.828S27.913,39.789,27.132,40.57z" /></g>
+                        </svg>
+                        &nbsp 友链
+                    </h3>
+                    <style>
+                        .link {
+                            overflow: hidden;
+                            width: 100%;
+                        }
+
+                        .link-item {
+                            width: 33.333%;
+                            float: left;
+                            padding: 0 5px 0;
+                        }
+                    </style>
+                    <ul class="link" style="margin: 0 0;padding-left: 0">
+                        <li class="link-item">111</li>
+                        <li class="link-item">222</li>
+                        <li class="link-item">333</li>
+                        <li class="link-item">444</li>
+                        <li class="link-item">555</li>
+                        <li class="link-item">666</li>
+                        <li class="link-item">444</li>
+                        <li class="link-item">555</li>
+                        <li class="link-item">666</li>
+                    </ul>
                 </div>
 
                 <div class="meta-item meta-comments">
-                    <h3 class="meta-title">联系博主</h3>
-                    TODO
+                    <h3 class="meta-title">
+                        <svg viewBox="0 0 51.997 51.997" width="10" height="10">
+                            <g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905c-2.517-4.307-6.846-6.906-11.697-6.906c-7.399,0-13.313,6.061-14.071,14.415c-0.06,0.369-0.306,2.311,0.442,5.478c1.078,4.568,3.568,8.723,7.199,12.013l18.115,16.439l18.426-16.438c3.631-3.291,6.121-7.445,7.199-12.014C52.216,18.553,51.97,16.611,51.911,16.242z M49.521,21.261c-0.984,4.172-3.265,7.973-6.59,10.985L25.855,47.481L9.072,32.25c-3.331-3.018-5.611-6.818-6.596-10.99c-0.708-2.997-0.417-4.69-0.416-4.701l0.015-0.101C2.725,9.139,7.806,3.826,14.158,3.826c4.687,0,8.813,2.88,10.771,7.515l0.921,2.183l0.921-2.183c1.927-4.564,6.271-7.514,11.069-7.514c6.351,0,11.433,5.313,12.096,12.727C49.938,16.57,50.229,18.264,49.521,21.261z" /></g>
+                        </svg>
+                        联系博主
+                    </h3>
+
+                    <div style="margin: 0 0">
+                        <div style="float:right;width:35%;">
+                            <img height="100%" width="100%" src="https://liuyanzhao.com/wp-content/uploads/2018/09/wechat.jpg">
+                        </div>
+                        <div style="margin-right:35%;padding-right:5px;">
+                            <p style="margin: 0 0">码农阿宇,常年活动在杭州周边,如果你需要我,欢迎扫面右边微信二维码与我联系.</p>
+                            <a style="margin: 0 0" href="mailto:liuzhenyulive@live.com?subject=Mail from iBlogs">liuzhenyulive@live.com</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
