--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/Setting/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/Setting/Index.cshtml
@@ -21,32 +21,32 @@
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">网站地址</label>
                                         <div class="col-md-9">
-                                            <input type="text" v-model="options.SiteUrl" class="form-control" placeholder="网站地址" required aria-required="true" />
+                                            <input type="text" v-model="options.siteUrl" class="form-control" placeholder="网站地址" required aria-required="true" />
                                             <span class="help-block"><small>请和你当前访问的域名保持一致，否则会出现渲染错误。</small></span>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">站点标题</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" v-model="options.SiteTitle" placeholder="站点子标题" required aria-required="true" />
+                                            <input type="text" class="form-control" v-model="options.siteTitle" placeholder="站点子标题" required aria-required="true" />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">站点子标题</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" v-model="options.SiteSubtitle" placeholder="站点子标题" required aria-required="true" />
+                                            <input type="text" class="form-control" v-model="options.siteSubtitle" placeholder="站点子标题" required aria-required="true" />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">站点描述</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" v-model="options.SiteDescription" placeholder="站点描述" required aria-required="true" />
+                                            <input type="text" class="form-control" v-model="options.description" placeholder="站点描述" required aria-required="true" />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">站点关键词</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" v-model="options.site_keywords" placeholder="站点关键词" required aria-required="true" />
+                                            <input type="text" class="form-control" v-model="options.keywords" placeholder="站点关键词" required aria-required="true" />
                                         </div>
                                     </div>
 
@@ -71,7 +71,7 @@
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">CND地址</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="CdnURL" placeholder="CDN地址" />
+                                            <input type="text" class="form-control" name="CdnURL" v-model="options.cdnUrl" placeholder="CDN地址" />
                                             <span class="help-block"><small>该地址用于加载博客后台静态资源，不清楚请勿设置。开启公共CDN选项时此配置无效</small></span>
                                         </div>
                                     </div>
@@ -80,7 +80,7 @@
                                     <div class="form-group">
                                         <label class="col-md-3 control-label">黑名单IP列表</label>
                                         <div class="col-md-9">
-                                            <textarea rows="3" class="form-control" v-model="options.site_block_ips" name="blockIps" placeholder="请输入黑名单IP，如：123.123.33.23,123.123.33.24"></textarea>
+                                            <textarea rows="3" class="form-control" v-model="options.blockIpList" name="blockIpList" placeholder="请输入黑名单IP，如：123.123.33.23,123.123.33.24"></textarea>
                                         </div>
                                     </div>
 
@@ -140,22 +140,22 @@
                 allowCloudCDN: '',
                 isLoading: true
             },
-            beforeCreate: function () {
+            beforeCreate: function() {
                 vueLoding = this.$loading.show();
             },
-            mounted: function () {
+            mounted: function() {
                 this.load();
             },
             methods: {
-                load: function () {
+                load: function() {
                     var $vm = this;
                     tale.get({
                         url: '/admin/api/options',
-                        success: function (data) {
+                        success: function(data) {
                             $vm.options = data.payload;
-                            $vm.allowInstall = data.payload.allow_install;
-                            $vm.allowCommentAudit = data.payload.allow_comment_audit;
-                            $vm.allowCloudCDN = data.payload.allow_cloud_CDN;
+                            $vm.allowInstall = data.payload.allowInstall;
+                            $vm.allowCommentAudit = data.payload.allowCommentAudit;
+                            $vm.allowCloudCDN = data.payload.allowCloudCdn;
 
                             $('#allowInstall').toggles({
                                 on: $vm.allowInstall === 'true',
@@ -182,19 +182,24 @@
                             });
 
                         },
-                        error: function (error) {
+                        error: function(error) {
                             console.log(error);
                             alert(error || '数据加载失败');
                         }
                     });
                 },
-                saveSetting: function () {
+                saveSetting: function() {
                     var $vm = this;
-                    var param = tale.copy($vm.options);
                     tale.postWithForm({
                         url: '/admin/api/options/save',
-                        data: param,
-                        success: function (result) {
+                        data: {
+                            siteUrl:$vm.options.siteUrl,
+                            siteTitle:$vm.options.siteTitle,
+                            siteSubtitle:$vm.options.siteSubtitle,
+                            description:$vm.options.description,
+                            keywords:$vm.options.keywords
+                        },
+                        success: function(result) {
                             if (result && result.success) {
                                 tale.alertOk('设置保存成功');
                                 $vm.load();
@@ -204,13 +209,13 @@
                         }
                     });
                 },
-                saveAdvanced: function () {
+                saveAdvanced: function() {
                     var $vm = this;
                     var param = $('#advanced-form').serialize();
                     tale.post({
                         url: '/admin/api/advanced/save',
                         data: param,
-                        success: function (result) {
+                        success: function(result) {
                             if (result && result.success) {
                                 tale.alertOk('选项保存成功');
                                 $vm.load();
@@ -223,19 +228,22 @@
             }
         });
 
-        $('#allowInstall').on('toggle', function (e, active) {
-            vm.allowInstall = active;
-        });
+        $('#allowInstall').on('toggle',
+            function(e, active) {
+                vm.allowInstall = active;
+            });
 
-        $('#allowCommentAudit').on('toggle', function (e, active) {
-            vm.allowCommentAudit = active;
-        });
+        $('#allowCommentAudit').on('toggle',
+            function(e, active) {
+                vm.allowCommentAudit = active;
+            });
 
-        $('#allowCloudCDN').on('toggle', function (e, active) {
-            vm.allowCloudCDN = active;
-        });
+        $('#allowCloudCDN').on('toggle',
+            function(e, active) {
+                vm.allowCloudCDN = active;
+            });
 
-        $(document).ready(function () {
+        $(document).ready(function() {
             vm.isLoading = false;
             vueLoding.hide();
         });
