--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
@@ -1,144 +1,19 @@
-﻿<div id="app" class="row" v-cloak>
-    <loading :active.sync="isLoading" :can-cancel="true"></loading>
-    <div class="col-lg-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">系统配置</h3>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th style="text-align:center;" width="10%">Key</th>
-                                    <th style="text-align:center;" width="30%">Value</th>
-                                    <th style="text-align:center;" width="40%">描述</th>
-                                    <th style="text-align:center;">操作</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr v-for="item in options">
-                                    <td style="text-align:center;">{{ item.key }}</td>
-                                    <td style="text-align:center;">{{ item.value }}</td>
-                                    <td style="text-align:center;">{{ item.description }}</td>
-                                    <td style="text-align:center;">
-                                        <button class="btn btn-success" data-toggle="modal" data-target="#myModal" v-on:click="optionEdit(item.id,item.key,item.value,item.description)">
-                                            <i class="fa fa-edit"></i> <span>编辑</span>
-                                        </button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">
-                                            <span aria-hidden="true" class="">×   </span><span class="sr-only">Close</span>
-
-                                        </button>
-                                        <h4 class="modal-title" id="myModalLabel">配置编辑</h4>
-
-                                    </div>
-                                    <div class="modal-body"></div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                                        <button type="button" class="btn btn-primary" v-on:click="save()">保存</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+﻿
+<ul id="myTab" class="nav nav-tabs">
+    <li class="active"><a href="#github" data-toggle="tab">Github</a></li>
+    <li><a href="#CnBlogs" data-toggle="tab">博客园</a></li>
+</ul>
+<div id="myTabContent" class="tab-content">
+    <div class="tab-pane fade in active" id="github">
+        <p>
+            iOS 是一个由苹果公司开发和发布的手机操作系统。最初是于 2007 年首次发布 iPhone、iPod Touch 和 Apple
+            TV。iOS 派生自 OS X，它们共享 Darwin 基础。OS X 操作系统是用在苹果电脑上，iOS 是苹果的移动版本。
+        </p>
+    </div>
+    <div class="tab-pane fade" id="CnBlogs">
+        <p>
+            iOS 是一个由苹果公司开发和发布的手机操作系统。最初是于 2007 年首次发布 iPhone、iPod Touch 和 Apple
+            TV。iOS 派生自 OS X，它们共享 Darwin 基础。OS X 操作系统是用在苹果电脑上，iOS 是苹果的移动版本。
+        </p>
     </div>
 </div>
-
-
-@section scripts
-{
-    <script>
-        var tale = new $.tale();
-        var vm = new Vue({
-            el: '#app',
-            data: {
-                options: {},
-                isLoading: true
-            },
-            beforeCreate: function () {
-                vueLoding = this.$loading.show();
-            },
-            mounted: function () {
-                this.load();
-            },
-            methods: {
-                load: function () {
-                    var $vm = this;
-                    tale.get({
-                        url: '/admin/api/options/GetAll',
-                        success: function (data) {
-                            $vm.options = data.payload;
-                        },
-                        error: function (error) {
-                            console.log(error);
-                            alert(result.msg || '数据加载失败');
-                        }
-                    });
-                },
-                optionEdit: function (id, key, value, description) {
-                    if (value == null)
-                        value = '';
-                    if (description == null)
-                        description = '';
-                    var modalBody = $('<div id="modalContent"></div>');
-                    var modalForm = $('<form role="form" id="modalForm"></form>');
-                    var formGroup = $('<div class="form-group"></div>');
-                    formGroup.append('<input type="hidden" id="id" name="id" value="' + id + '" />');
-                    formGroup.append('<label for="key">key</label>');
-                    formGroup.append('<input class="form-control" name="key" id="key" value="' + key + '" readonly="readonly" />');
-                    formGroup.append('<label for="key">value</label>');
-                    formGroup.append('<input class="form-control" name="value" id="vale" value="' + value + '" />');
-                    formGroup.append('<label for="key">描述</label>');
-                    formGroup.append('<input class="form-control" name="description" id="description" value="' +
-                        description +
-                        '" />');
-                    modalForm.append(formGroup);
-
-                    modalBody.append(modalForm);
-                    $('.modal-body').html(modalBody);
-                },
-                save: function () {
-                    var $vm = this;
-                    var form = $("#modalForm");
-                    $.ajax({
-                        url: '/admin/api/options/update',
-                        data: form.serialize(),
-                        type: 'POST',
-                        success: function (data) {
-                            if (data && data.success) {
-                                $vm.load();
-                                tale.alertOk('保存成功');
-                                $('#myModal').modal('hide');
-                            } else {
-                                tale.alertError(result.msg || '保存失败');
-                            }
-                        },
-                        error: function (error) {
-                            console.log(error);
-                            alert(error.msg || '数据加载失败');
-                        }
-                    });
-                }
-            }
-        });
-
-
-        $(document).ready(function () {
-            vm.isLoading = false;
-            vueLoding.hide();
-        });
-
-    </script>
-}
